Flagdle/game/static/game/homepage.css
.button-grid {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    flex-wrap: nowrap;
    justify-content: center;
    gap: 30px;
    margin: 40px;
    max-width: 90%;
    /* max-width: 400px; */
}

.info-grid,
.game-grid {
    display: flex;
    flex-direction: column;
    align-items: center;
    flex-wrap: nowrap;
    justify-content: center;
    gap: 30px;
    width: 100%;
}

.game-button {
    display: flex;
    flex-direction: row;
    color: var(--text-color);
    user-select: none;
    margin:0;
    padding: 0;
    width: 100%;
    max-width: 450px;
    height:100%;
}

.game-button button {
    display: flex;
    flex-direction: row;
    justify-content: flex-start !important;
    overflow: hidden;
    background-color: var(--container-background) !important;
    width: 100%;
    height: fit-content;
    font-size: 20px !important;
    cursor: pointer;
    padding: 0 !important;
    border: 3px solid var(--container-border) !important;
    border-radius: 80px !important;
}

.game-button button:hover {
    border-color: var(--acent-color)!important;
    background-color: var(--container-background-hover)!important;
}

.game-button button:active {
    border-color: var(--acent-color) !important;
}

.game-button img {
    width: 125px;
    height: 125px;
    margin: -2px;
    margin-right: 7%;
    border-radius: 80px;
    color: var(--text-color);
    box-shadow: var(--img-box-shadow);
    user-select: none;
}

.game-button span {
    color: var(--text-color);
    font-size: 1.3em;
    width: calc(100% - 125px - 14%);
}

.clickable {
    cursor: pointer;
}

.clickable:active {
    transform: translateY(2px);
    box-shadow: var(--active-box-shadow);
}
 

.horizontal_delimiter{
    height: 80%;
    width: 4px;
    margin: 0 10px;
}

.vertical_delimiter{
    display: none;
}

@media (min-width: 900px) {
    .info-grid,
    .horizontal_delimiter {
        position: sticky;
        top: calc(50% - 250px);
        height: 500px;
    }
}

@media (max-width: 900px) {
    .button-grid {
        flex-direction: column;
        align-items: center;
        gap: 15px;
        width: 90%;
        max-width: 550px;
    }
    .horizontal_delimiter {
        display: none;
    }

    .vertical_delimiter {
        display: block;
    }

    .game-button {
        width: 100%;
        max-width: 500px;
    }
}
@media (max-width: 550px) {
    .info-grid,
    .game-grid {
        gap: 15px;
    }

    .game-button img {
        width: 100px;
        height: 100px;
    }

    .game-button span {
        font-size: 1em;
    }
}

